--- a/arch-chroot.html
+++ b/arch-chroot.html
@@ -18,9 +18,9 @@ locale-gen
 
 pacman -S grub efibootmgr networkmanager
 
-pacman -S xorg-server xorg-apps i3 xfce4-terminal xfce4-panel xfce4-clipman-plugin lightdm lightdm-gtk-greeter 
+pacman -S xorg-server xorg-apps i3 xfce4-terminal xfce4-clipman-plugin lightdm lightdm-gtk-greeter 
 
-pacman -S pulseaudio pavucontrol intel-ucode base-devel git zip unzip udisks2 gvfs-mtp brightnessctl 
+pacman -S pulseaudio pavucontrol intel-ucode base-devel git zip unzip udisks2 gvfs-mtp brightnessctl nitrogen rofi thunar
 
 systemctl enable NetworkManager
 systemctl enable lightdm
