--- a/arch-chroot.html
+++ b/arch-chroot.html
@@ -20,7 +20,7 @@ pacman -S grub efibootmgr networkmanager
 
 pacman -S xorg-server xorg-apps i3 xfce4-terminal xfce4-clipman-plugin lightdm lightdm-gtk-greeter 
 
-pacman -S pulseaudio pavucontrol intel-ucode base-devel git zip unzip udisks2 gvfs-mtp brightnessctl nitrogen rofi thunar
+pacman -S pulseaudio pavucontrol intel-ucode base-devel git zip unzip udisks2 gvfs-mtp brightnessctl nitrogen rofi thunar vivaldi
 
 systemctl enable NetworkManager
 systemctl enable lightdm
