--- a/arch-chroot.html
+++ b/arch-chroot.html
@@ -1,21 +1,16 @@
 #!/bin/bash
 ln -sf /usr/share/zoneinfo/Europe/Istanbul /etc/localtime
-
 hwclock --systohc
-
 echo "tr_TR.UTF-8 UTF-8" >> /etc/locale.gen
-
 echo 'LANG="tr_TR.UTF-8"' >> /etc/locale.conf
-
 echo "KEYMAP=trq" >> /etc/vconsole.conf
-
 echo "archlinux" >> /etc/hostname
 
 echo "127.0.0.1		localhost" >> /etc/hosts
 echo "::1		localhost" >> /etc/hosts
 locale-gen
 
-pacman -S grub efibootmgr networkmanager
+pacman -S grub efibootmgr networkmanager sudo
 
 pacman -S xorg i3 xfce4-terminal lightdm lightdm-gtk-greeter base-devel git zip unzip brightnessctl nitrogen rofi thunar firefox
 
@@ -40,7 +35,6 @@ git clone https://github.com/bandolerotr/arch-script.git
 cd arch-script
 
 cp xorg/00-keyboard.conf /etc/X11/xorg.conf.d/
-cp xorg/20-intel.conf /etc/X11/xorg.conf.d/
 
 systemctl enable NetworkManager
 systemctl enable lightdm
