--- a/arch-chroot.html
+++ b/arch-chroot.html
@@ -1,4 +1,5 @@
 #!/bin/bash
+#minimal arch
 ln -sf /usr/share/zoneinfo/Europe/Istanbul /etc/localtime
 hwclock --systohc
 echo "tr_TR.UTF-8 UTF-8" >> /etc/locale.gen
