--- a/arch-chroot.html
+++ b/arch-chroot.html
@@ -13,7 +13,7 @@ locale-gen
 
 pacman -S grub efibootmgr networkmanager sudo 
 
-pacman -S xorg i3 xfce4-terminal lightdm lightdm-gtk-greeter base-devel git zip unzip brightnessctl nitrogen rofi thunar firefox
+pacman -S xorg i3 xfce4-terminal lightdm lightdm-gtk-greeter base-devel git zip unzip brightnessctl rofi thunar gvfs-mtp
 
 mkinitcpio -P
 mkdir /boot/efi
